@@ -3,7 +3,7 @@
   <schemalist>
       <schema>
       <key>/schemas/apps/glines/preferences/ball_theme</key>
-      <applyto>/apps/gnect/preferences/ball_theme</applyto>
+      <applyto>/apps/glines/preferences/ball_theme</applyto>
       <owner>glines</owner>
       <type>string</type>
       <default>pulse.png</default>
@@ -14,14 +14,14 @@
       </schema>
 
       <schema>
-      <key>/schemas/apps/glines/preferences/box_theme</key>
-      <applyto>/apps/glines/preferences/box_theme</applyto>
+      <key>/schemas/apps/glines/preferences/background_color</key>
+      <applyto>/apps/glines/preferences/background_color</applyto>
       <owner>glines</owner>
       <type>string</type>
-      <default>gray.xpm</default>
+      <default>#7590AE</default>
       <locale name="C">
-        <short>Box style</short>
-        <long>Box style.  The filename of the image to use for the boxes.</long>
+        <short>Background color</short>
+        <long>Background color.  The hex specification of the background color.</long>
       </locale>
       </schema>
 
